--- a/Swiper-Invitation/index.css
+++ b/Swiper-Invitation/index.css
@@ -1143,6 +1143,9 @@ left: 29%;
         width: 300px;
         top: 100px;
     }
+    .top p{
+        margin-top: 75px;
+    }
 }
 @media screen and (max-width:412px){
     .s2 #center{
